QPID-8653: [Broker-J] Code cleanup: collection type arguments, collection factory methods, lambdas (#216)