@@ -27,9 +27,7 @@ import static org.hamcrest.MatcherAssert.assertThat;
 import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.when;
 
-import java.util.Arrays;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 
@@ -56,7 +54,7 @@ public class LegacyManagementControllerTest extends UnitTestBase
     @Test
     public void convertQueryParameters()
     {
-        final Map<String, List<String>> parameters = Collections.singletonMap("depth", Collections.singletonList("1"));
+        final Map<String, List<String>> parameters = Map.of("depth", List.of("1"));
         final Map<String, List<String>> converted = _controller.convertQueryParameters(parameters);
         assertThat(converted, is(equalTo(parameters)));
     }
@@ -66,16 +64,15 @@ public class LegacyManagementControllerTest extends UnitTestBase
     {
         final String objectName = "test-object";
         final String hostName = "test-vhn";
-        final Map<String, List<String>> parameters = Collections.singletonMap("depth", Collections.singletonList("1"));
+        final Map<String, List<String>> parameters = Map.of("depth", List.of("1"));
         final LegacyConfiguredObject object = mock(LegacyConfiguredObject.class);
         final LegacyConfiguredObject vhn = mock(LegacyConfiguredObject.class);
-        when(object.getAttributeNames()).thenReturn(Arrays.asList(LegacyConfiguredObject.NAME,
-                                                                  LegacyConfiguredObject.TYPE));
+        when(object.getAttributeNames()).thenReturn(List.of(LegacyConfiguredObject.NAME, LegacyConfiguredObject.TYPE));
         when(object.getAttribute(LegacyConfiguredObject.NAME)).thenReturn(objectName);
         when(object.getAttribute(LegacyConfiguredObject.TYPE)).thenReturn("Broker");
         when(object.getCategory()).thenReturn("Broker");
-        when(object.getChildren("VirtualHostNode")).thenReturn(Collections.singletonList(vhn));
-        when(vhn.getAttributeNames()).thenReturn(Arrays.asList(LegacyConfiguredObject.NAME,
+        when(object.getChildren("VirtualHostNode")).thenReturn(List.of(vhn));
+        when(vhn.getAttributeNames()).thenReturn(List.of(LegacyConfiguredObject.NAME,
                                                                   LegacyConfiguredObject.TYPE));
         when(vhn.getAttribute(LegacyConfiguredObject.NAME)).thenReturn(hostName);
         when(vhn.getAttribute(LegacyConfiguredObject.TYPE)).thenReturn("VirtualHostNode");
